--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Our Team</title>
 </head>
 <body>
-    
+    <div id="container"></div>
 
     <script src="js/script.js"></script>
     <script src="js/main.js"></script>
